fixed social media icons on mobile

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -93,12 +93,12 @@ a.white-background-link:hover {
 }
 
 .social-media-icon {
-	width: 3%;
+	width: 12%;
 	margin: 2px;
 }
 
 .tab-social-media-icon {
-	width: 7%;
+	width: 13%;
 	margin-top: 2%;
 }
 
@@ -111,6 +111,19 @@ iframe {
 	height: 600px; 
 }
 
+@media screen and (min-width: 768px) {
+	.social-media-icon {
+		width: 6%;
+		margin: 2px;
+	}
+
+	.tab-social-media-icon {
+		width: 10%;
+		margin-top: 2%;
+	}
+
+}
+
 @media screen and (min-width: 992px) {
 	.accent-font-1 {
 		font-size: 1.5em;
@@ -118,6 +131,19 @@ iframe {
 
 	.accent-font-2 {
 		font-size: 1em;
+	}
+
+}
+
+@media screen and (min-width: 1200px) {
+	.social-media-icon {
+		width: 3%;
+		margin: 2px;
+	}
+
+	.tab-social-media-icon {
+		width: 7%;
+		margin-top: 2%;
 	}
 }
 
